# duneutil

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
buildScripts/: build-duneanaobj.sh  build-dunendlar.sh  build-dunepdlegacy.sh  build-dunepdsprce.sh  build-edep-sim.sh  build-garana.sh  build-garsoft.sh  build-webevd.sh  buildDUNE.sh  buildDUNE2.sh  buildDUNESuite.sh  buildDUNEutil.sh  buildProtoDUNEana.sh
dhtools/: CMakeLists.txt  README.txt  README_35t_datatransfer.txt  daq6deleter.sh  declare_files.sh  dtr35t1.sh  dtranslog35t.sh  example.json  example2.json  exampleSlice.json  get_files.py  gwtdeleter.sh  iceberg_metadata.sh  make_json_lbne.sh  make_metadata35t_declare.sh  make_metadata35t_declare_Slice.sh  senv.sh
python/: CMakeLists.txt  cache_state.py  experiment_utilities.py  extractor_dict.py  new_cache_state.py
scripts/: CMakeLists.txt  ECLAPI.py  copyFromJenkins  dependency_graph.sh  extractor_new.md  extractor_new.py  extractor_prod.py  findRunFiles  fix_deps_cmake.py  getfile.py  getreco.py  latest  list_dependencies.py  make_xml_35tdata.sh  make_xml_mcc.sh  make_xml_mcc1.0.sh  make_xml_mcc10.0.sh  make_xml_mcc2.0.sh  make_xml_mcc3.0.sh  make_xml_mcc4.0.sh  make_xml_mcc5.0.sh  make_xml_mcc6.0.sh  make_xml_mcc7.0.sh  make_xml_mcc7.1.sh  make_xml_mcc7.2.sh  make_xml_protodune_mcc8.0.sh  make_xml_sys.sh  mcc10_SubmissionScript.sh  pandora_metadata.py  pnfs2xrootd  print_deps.py  samweb2rootd  samweb2xrootd  setup_dune.sh  setup_fnal_security  submit_mcc.py  update_metadata.py  workflows.json
ups/: product_deps
xml/: CMakeLists.txt
xml/mcc1.0/: AntiMuonCutEvents_LSU_v2.txt  CMakeLists.txt  prod_muminus_lbne35t.xml  prodcosmics_lbne35t_milliblock.xml  prodcosmics_lbne35t_onewindow.xml  prodtextfile_lbne35t.xml
xml/mcc2.0/: AntiMuonCutEvents_LSU_lbne35t.xml  CMakeLists.txt  prod_muminus_lbne35t.xml  prodcosmics_lbne35t_milliblock.xml  prodcosmics_lbne35t_onewindow.xml
xml/mcc3.0/: AntiMuonCutEvents_LSU_lbne35t.xml  prod_muminus_lbne35t.xml  prodcosmics_lbne35t_milliblock.xml  prodcosmics_lbne35t_onewindow.xml
xml/mcc4.0/: AntiMuonCutEvents_LSU_dune35t.xml  prod_gamma_0.1-1.0GeV_dune35t.xml  prod_muminus_dune35t.xml  prod_pi0_0.4-1.0GeV_dune35t.xml  prod_piminus_2GeV_dune35t.xml  prodcosmics_dune35t_milliblock.xml  prodcosmics_dune35t_milliblock_countermu.xml  prodcosmics_dune35t_milliblock_protonpi0.xml  prodcosmics_dune35t_onewindow.xml  prodgenie_nu_dune10kt.xml  prodgenie_nu_dune10kt_workspace.xml  prodgenie_nue_dune10kt.xml  prodgenie_nue_dune10kt_workspace.xml  prodgenie_nutau_dune10kt.xml  prodgenie_nutau_dune10kt_workspace.xml
xml/mcc5.0/: AntiMuonCutEvents_LSU_dune35t.xml  prodMUSUN_dune10kt.xml  prod_eminus_0.1-5.0GeV_isotropic_dune10kt_3mmpitch_workspace.xml  prod_eminus_0.1-5.0GeV_isotropic_dune10kt_45deg_workspace.xml  prod_eminus_0.1-5.0GeV_isotropic_dune10kt_workspace.xml  prod_gamma_0.1-1.0GeV_dune35t.xml  prod_gamma_0.1-2.0GeV_isotropic_dune10kt_3mmpitch_workspace.xml  prod_gamma_0.1-2.0GeV_isotropic_dune10kt_45deg_workspace.xml  prod_gamma_0.1-2.0GeV_isotropic_dune10kt_workspace.xml  prod_kplus_0.1-2.0GeV_isotropic_dune10kt_workspace.xml  prod_muminus_0.1-5.0GeV_isotropic_dune10kt_workspace.xml  prod_muminus_dune35t.xml  prod_p_0.1-2.0GeV_isotropic_dune10kt_workspace.xml  prod_pi0_0.1-2.0GeV_isotropic_dune10kt_3mmpitch_workspace.xml  prod_pi0_0.1-2.0GeV_isotropic_dune10kt_45deg_workspace.xml  prod_pi0_0.1-2.0GeV_isotropic_dune10kt_workspace.xml  prod_pi0_0.4-1.0GeV_dune35t.xml  prod_piminus_0.1-2.0GeV_isotropic_dune10kt_workspace.xml  prod_piminus_2GeV_dune35t.xml  prodcosmics_dune35t_milliblock.xml  prodcosmics_dune35t_milliblock_countermu.xml  prodcosmics_dune35t_milliblock_protonpi0.xml  prodcosmics_dune35t_onewindow.xml  prodgenie_anu_dune10kt.xml  prodgenie_anu_dune10kt_workspace.xml  prodgenie_anue_dune10kt.xml  prodgenie_anue_dune10kt_workspace.xml  prodgenie_anutau_dune10kt.xml  prodgenie_anutau_dune10kt_workspace.xml  prodgenie_nu_dune10kt.xml  prodgenie_nu_dune10kt_3mmpitch_workspace.xml  prodgenie_nu_dune10kt_45deg_workspace.xml  prodgenie_nu_dune10kt_r10deg_workspace.xml  prodgenie_nu_dune10kt_workspace.xml  prodgenie_nue_dune10kt.xml  prodgenie_nue_dune10kt_3mmpitch_workspace.xml  prodgenie_nue_dune10kt_45deg_workspace.xml  prodgenie_nue_dune10kt_r10deg_workspace.xml  prodgenie_nue_dune10kt_workspace.xml  prodgenie_nutau_dune10kt.xml  (+11 more)
xml/mcc6.0/: AntiMuonCutEvents_LSU_dune35t.xml  gen_protoDune_electron_1GeV_dp5.xml  gen_protoDune_electron_1GeV_mono.xml  gen_protoDune_kaon_1GeV_dp5.xml  gen_protoDune_kaon_1GeV_mono.xml  gen_protoDune_muon_200MeV_dp5.xml  gen_protoDune_muon_200MeV_mono.xml  gen_protoDune_pion_200MeV_dp5.xml  gen_protoDune_pion_200MeV_mono.xml  gen_protoDune_proton_1GeV_dp5.xml  gen_protoDune_proton_1GeV_mono.xml  prodMUSUN_dune10kt.xml  prod_eminus_0.1-5.0GeV_isotropic_dune10kt_1x2x6.xml  prod_eminus_0.1-5.0GeV_isotropic_dune10kt_3mmpitch_1x2x6.xml  prod_eminus_0.1-5.0GeV_isotropic_dune10kt_3mmpitch_workspace.xml  prod_eminus_0.1-5.0GeV_isotropic_dune10kt_45deg_1x2x6.xml  prod_eminus_0.1-5.0GeV_isotropic_dune10kt_45deg_workspace.xml  prod_eminus_0.1-5.0GeV_isotropic_dune10kt_workspace.xml  prod_gamma_0.1-1.0GeV_dune35t.xml  prod_gamma_0.1-2.0GeV_isotropic_dune10kt_1x2x6.xml  prod_gamma_0.1-2.0GeV_isotropic_dune10kt_3mmpitch_1x2x6.xml  prod_muminus_dune35t.xml  (+81 more)
(+345 files in other folders)
